# nixfleet

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISASTER-RECOVERY.md  QUICKSTART.md  README-reference-fleet.md  README.md  TECHNICAL.md  TODO.md  crane-workspace.nix  flake.nix
.claude/: settings.json  stack.yml
.claude/agents/: architect.md  code-reviewer.md  config-manager.md  devops.md  doc-writer.md  docs-assessor.md  fleet-ops.md  integration-tester.md  nix-expert.md  plan-reviewer.md  plan-writer.md  product-analyst.md  rust-expert.md  security-reviewer.md  spec-writer.md  test-runner.md
.claude/hooks/: check-config-deps.sh  check-docs-tree.sh  config-deps.json  doc-sync-check.sh  format-nix.sh  guard-destructive.sh  pre-git-commit.sh  pre-git-push.sh  session-context.sh
.claude/rules/: config-dependencies.md  git-workflow.md  multi-repo.md  nix-patterns.md  nix-style.md  platform-design.md  platform.md  product.md  rust-workspace.md  security-review.md  superpowers-enforcement.md  testing.md  wrapper-boundary.md
.claude/security-reviews/: 2026-03-24.md  2026-03-25.md  2026-03-26.md  findings-2026-03-24.md
.forgejo/workflows/: ci.yml  docs.yml
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml
agent/: Cargo.toml
agent/src/: comms.rs  config.rs  main.rs  nix.rs  state.rs  store.rs  tls.rs  types.rs
agent/tests/: integration.rs
apps/aarch64-darwin/: build-switch  rollback
apps/x86_64-linux/: build-switch
cli/src/: client.rs  deploy.rs  host.rs  machines.rs  main.rs  policy.rs  rollout.rs  schedule.rs  status.rs
contracts/: host-spec.nix  persistence.nix  trust.nix
control-plane/: Cargo.toml
control-plane/src/: audit.rs  auth.rs  db.rs  lib.rs  main.rs  routes.rs  state.rs  tls.rs
control-plane/tests/: agent_integration.rs
crates/nixfleet-agent/: Cargo.toml
crates/nixfleet-canonicalize/: Cargo.toml
crates/nixfleet-canonicalize/src/: lib.rs  main.rs
crates/nixfleet-canonicalize/tests/: jcs_golden.rs  rfc8785_appendix_e.rs
crates/nixfleet-cli/: Cargo.toml
crates/nixfleet-cli/src/: lib.rs  main.rs
crates/nixfleet-control-plane/: Cargo.toml
crates/nixfleet-docgen/: Cargo.toml
crates/nixfleet-docgen/src/: main.rs  nix_comments.rs  rust_extractor.rs  summary.rs
crates/nixfleet-reconciler/: Cargo.toml
crates/nixfleet-reconciler/src/: action.rs  budgets.rs  edges.rs  evidence.rs  host_state.rs  lib.rs  manifest.rs  observed.rs  reconcile.rs  rollout_state.rs  verify.rs
crates/nixfleet-reconciler/src/gates/: channel_edges.rs  compliance_wave.rs  disruption_budget.rs  host_edges.rs  mod.rs  tests.rs  wave_promotion.rs
crates/nixfleet-reconciler/tests/: budgets_and_edges.rs  host_transitions.rs  rollout_transitions.rs  verify.rs
crates/nixfleet-reconciler/tests/common/: mod.rs
crates/nixfleet-reconciler/tests/fixtures/budgets_edges/budget_across_rollouts/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/budgets_edges/budget_exhausted_skip/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/budgets_edges/edge_predecessor_blocks/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/budgets_edges/edge_predecessor_done_dispatch/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/host/healthy_soak_elapsed/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/host/healthy_soak_not_elapsed/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/host/healthy_to_soaked/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/host/host_failed_triggers_halt/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/rollout/all_waves_converged/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/rollout/planning_to_executing/: fleet.json
crates/nixfleet-reconciler/tests/fixtures/rollout/wave_active_to_soaking/: fleet.json
crates/nixfleet-release/: Cargo.toml
crates/nixfleet-release/src/: git.rs  lib.rs  main.rs  sign.rs
crates/nixfleet-release/tests/: sign_smoke_roundtrip.rs
crates/nixfleet-verify-artifact/: Cargo.toml
crates/nixfleet-verify-artifact/src/: main.rs
crates/nixfleet-verify-artifact/tests/: parse_fixture_trust.rs
demo/: README.md  pre-demo.sh  spawn-fleet.sh
disk-templates/: btrfs-disk.nix
docs/: CONTRACTS.md  KICKOFF.md  README.md  commercial-extensions.md  harness.md  phase-3-entry-spec.md  phase-4-deferred.md  phase-4-entry-spec.md  roadmap.md  source-layout.md  trust-root-flow.md
docs/adr/: 001-mkhost-over-mkfleet.md  002-flags-over-roles.md  004-standard-tooling-over-custom-scripts.md  005-follows-chain-strategy.md  006-hostspec-extension.md  007-auth-route-split.md  012-cp-sqlite-mutex-bound.md
docs/business/: 01-what-is-nix.md  02-why-nix.md  03-problems-we-solve.md  04-target-market.md  05-the-product.md  README.md
docs/decisions/: 003-agent-as-service-module.md
docs/guide/: README.md  SUMMARY.md  book.toml
docs/mdbook/: SUMMARY.md  architecture.md  book.toml
docs/nixfleet/: README.md
docs/rfcs/: 0001-fleet-nix.md  0002-reconciler.md  0003-protocol.md
docs/roadmap/: 0001-pluggable-activation-backend.md  0002-v0.2-completeness-gaps.md
docs/src/: README.md  SUMMARY.md  architecture.md  book.toml
examples/client-fleet/: README.md  fleet.nix
impls/gitops/: forgejo.nix
impls/persistence/: impermanence.nix
impls/secrets/: default.nix
iso/: README.md
lib/: default.nix  flake-module.nix  mk-fleet.nix  mk-host.nix  mk-vm-apps.nix  mkFleet.nix  vm-helpers.sh  vm-platform.nix
lib/vm-scripts/: build.nix  (+4 more)
modules/: _trust.nix  agent-package.nix  apps.nix  flake-module.nix  fleet.nix  formatter.nix  iso.nix  module-options.nix  options-doc.nix  rust-packages.nix
rfcs/: 0001-fleet-nix.md  0002-reconciler.md  0003-protocol.md
scripts/: backlog-existing-issues.sh  gh-issue-helper.sh  migrate-todo-to-issues.sh  setup-github-labels.sh  setup-github-milestones.sh
(+532 files in other folders)
