[package]
name = "nixfleet-canonicalize"
version = "0.2.0"
edition = "2021"
description = "JCS (RFC 8785) canonicalizer for NixFleet signed artifacts"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_canonicalize"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-canonicalize"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
