[package]
name = "nixfleet-cli"
version = "0.2.0"
edition = "2021"
description = "NixFleet v0.2 operator-workstation helper binaries (mint-token, derive-pubkey)"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

# Operator-side bootstrap-token minter. Run once per fleet host
# before first deploy; emits a one-shot signed token the agent
# uses on `/v1/enroll`.
[[bin]]
name = "nixfleet-mint-token"
path = "src/bin/mint_token.rs"

# Operator-side scratch helper: derive base64 ed25519 pubkey
# from a raw 32-byte private key file. Used once when initialising
# `nixfleet.trust.orgRootKey.current` in fleet.nix.
[[bin]]
name = "nixfleet-derive-pubkey"
path = "src/bin/derive_pubkey.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
