[package]
name = "nixfleet-docgen"
version = "0.2.0"
edition = "2021"
description = "Auto-generate Markdown reference docs from nixfleet's Rust + Nix sources. Output is sorted, comment-only (no embedded timestamps), so reruns against the same code produce byte-identical files. Used by `nix run .#docs` and the doc-drift CI gate."
license = "AGPL-3.0-only"

[[bin]]
name = "nixfleet-docgen"
path = "src/main.rs"

[dependencies]
# Rust source parsing — used to walk the AST + extract per-item
# /// docs cleanly. Pinned to the same major as the rest of the
# workspace's transitive `syn` deps to avoid lock churn.
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
