[package]
name = "nixfleet-release"
version = "0.2.0"
edition = "2021"
description = "Producer for fleet.resolved.json (CONTRACTS §I #1) — orchestrates build → inject closureHash → stamp meta → canonicalize → sign → release"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[lib]
name = "nixfleet_release"
path = "src/lib.rs"

[[bin]]
name = "nixfleet-release"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-canonicalize = { path = "../nixfleet-canonicalize" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3"
sha2 = "0.10"

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
