[package]
name = "nixfleet-verify-artifact"
version = "0.2.0"
edition = "2021"
description = "Offline verifier CLI: fleet.resolved artifacts + signed probe-output evidence"
license = "MIT"
repository = "https://github.com/arcanesys/nixfleet"
homepage = "https://github.com/arcanesys/nixfleet"
authors = ["nixfleet contributors"]

[[bin]]
name = "nixfleet-verify-artifact"
path = "src/main.rs"

[dependencies]
nixfleet-proto = { path = "../nixfleet-proto" }
nixfleet-reconciler = { path = "../nixfleet-reconciler" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
